# autonomous-motion-planner

./: CMakeLists.txt  README.md  package.xml
config/: motion_planner_cfg.yaml
include/autonomous_motion_planner/: motion_planner.hpp
include/autonomous_motion_planner/path_smoother/: bezier.hpp
include/autonomous_motion_planner/planners/: a_star.hpp
include/autonomous_motion_planner/velocity_smoother/: trapezoidal_profile.hpp
msgs/: Path.msg  Waypoint.msg
src/: motion_planner.cpp
src/path_smoother/: bezier.cpp
src/planners/: a_star.cpp
src/velocity_smoother/: trapezoidal_profile.cpp
